--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2018 Git.Training
 -->
 <head>
-	<title>A Very Respectful Website</title>
+	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
