Adding copyright notice new

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2018 Git.Training
+	Copyright 2018 Git.Training New
 -->
 <head>
 	<title>An Example Website</title>
