Adding yet another copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-	Copyright 2018 Git.Training New
+	Copyright 2018 Git.Training New -- new again
 -->
 <head>
 	<title>An Example Website</title>
