--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2018 Git.Training New -- new again
 -->
 <head>
-	<title>An Example Website</title>
+	<title>An Craig Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content this is some more changes
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Git Training 2018</p>
+		<p>&copy; Craig Smith2018</p>
 	</footer>
 </body>
 </html>
